--- a/include/lte/CMakeLists.txt
+++ b/include/lte/CMakeLists.txt
@@ -52,5 +52,7 @@ install(FILES
     mimo_pss_tagger.h
     mimo_pss_coarse_control.h
     pss.h
-    mimo_pss_freq_sync.h DESTINATION include/lte
+    mimo_pss_freq_sync.h
+    mimo_sss_symbol_selector.h
+    mimo_sss_calculator.h DESTINATION include/lte
 )
