--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -74,3 +74,5 @@ GR_ADD_TEST(qa_descrambler_vfvf ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}
 GR_ADD_TEST(qa_pcfich_scramble_sequencer_m ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_pcfich_scramble_sequencer_m.py)
 GR_ADD_TEST(qa_pcfich_demux_vcvc ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_pcfich_demux_vcvc.py)
 GR_ADD_TEST(qa_mimo_pss_freq_sync ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_mimo_pss_freq_sync.py)
+GR_ADD_TEST(qa_mimo_sss_symbol_selector ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_mimo_sss_symbol_selector.py)
+GR_ADD_TEST(qa_mimo_sss_calculator ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_mimo_sss_calculator.py)
