--- a/build-cb/lib/Makefile
+++ b/build-cb/lib/Makefile
@@ -364,6 +364,102 @@ mib_unpack_vbm_impl.cc.s:
 	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mib_unpack_vbm_impl.cc.s
 .PHONY : mib_unpack_vbm_impl.cc.s
 
+mimo_channel_estimator_impl.o: mimo_channel_estimator_impl.cc.o
+.PHONY : mimo_channel_estimator_impl.o
+
+# target to build an object file
+mimo_channel_estimator_impl.cc.o:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_channel_estimator_impl.cc.o
+.PHONY : mimo_channel_estimator_impl.cc.o
+
+mimo_channel_estimator_impl.i: mimo_channel_estimator_impl.cc.i
+.PHONY : mimo_channel_estimator_impl.i
+
+# target to preprocess a source file
+mimo_channel_estimator_impl.cc.i:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_channel_estimator_impl.cc.i
+.PHONY : mimo_channel_estimator_impl.cc.i
+
+mimo_channel_estimator_impl.s: mimo_channel_estimator_impl.cc.s
+.PHONY : mimo_channel_estimator_impl.s
+
+# target to generate assembly for a file
+mimo_channel_estimator_impl.cc.s:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_channel_estimator_impl.cc.s
+.PHONY : mimo_channel_estimator_impl.cc.s
+
+mimo_extract_subcarriers_impl.o: mimo_extract_subcarriers_impl.cc.o
+.PHONY : mimo_extract_subcarriers_impl.o
+
+# target to build an object file
+mimo_extract_subcarriers_impl.cc.o:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_extract_subcarriers_impl.cc.o
+.PHONY : mimo_extract_subcarriers_impl.cc.o
+
+mimo_extract_subcarriers_impl.i: mimo_extract_subcarriers_impl.cc.i
+.PHONY : mimo_extract_subcarriers_impl.i
+
+# target to preprocess a source file
+mimo_extract_subcarriers_impl.cc.i:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_extract_subcarriers_impl.cc.i
+.PHONY : mimo_extract_subcarriers_impl.cc.i
+
+mimo_extract_subcarriers_impl.s: mimo_extract_subcarriers_impl.cc.s
+.PHONY : mimo_extract_subcarriers_impl.s
+
+# target to generate assembly for a file
+mimo_extract_subcarriers_impl.cc.s:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_extract_subcarriers_impl.cc.s
+.PHONY : mimo_extract_subcarriers_impl.cc.s
+
+mimo_pbch_demux_impl.o: mimo_pbch_demux_impl.cc.o
+.PHONY : mimo_pbch_demux_impl.o
+
+# target to build an object file
+mimo_pbch_demux_impl.cc.o:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_pbch_demux_impl.cc.o
+.PHONY : mimo_pbch_demux_impl.cc.o
+
+mimo_pbch_demux_impl.i: mimo_pbch_demux_impl.cc.i
+.PHONY : mimo_pbch_demux_impl.i
+
+# target to preprocess a source file
+mimo_pbch_demux_impl.cc.i:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_pbch_demux_impl.cc.i
+.PHONY : mimo_pbch_demux_impl.cc.i
+
+mimo_pbch_demux_impl.s: mimo_pbch_demux_impl.cc.s
+.PHONY : mimo_pbch_demux_impl.s
+
+# target to generate assembly for a file
+mimo_pbch_demux_impl.cc.s:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_pbch_demux_impl.cc.s
+.PHONY : mimo_pbch_demux_impl.cc.s
+
+mimo_pre_decoder_impl.o: mimo_pre_decoder_impl.cc.o
+.PHONY : mimo_pre_decoder_impl.o
+
+# target to build an object file
+mimo_pre_decoder_impl.cc.o:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_pre_decoder_impl.cc.o
+.PHONY : mimo_pre_decoder_impl.cc.o
+
+mimo_pre_decoder_impl.i: mimo_pre_decoder_impl.cc.i
+.PHONY : mimo_pre_decoder_impl.i
+
+# target to preprocess a source file
+mimo_pre_decoder_impl.cc.i:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_pre_decoder_impl.cc.i
+.PHONY : mimo_pre_decoder_impl.cc.i
+
+mimo_pre_decoder_impl.s: mimo_pre_decoder_impl.cc.s
+.PHONY : mimo_pre_decoder_impl.s
+
+# target to generate assembly for a file
+mimo_pre_decoder_impl.cc.s:
+	cd /home/maier/gr-lte/build-cb && $(MAKE) -f lib/CMakeFiles/gnuradio-lte.dir/build.make lib/CMakeFiles/gnuradio-lte.dir/mimo_pre_decoder_impl.cc.s
+.PHONY : mimo_pre_decoder_impl.cc.s
+
 mimo_pss_coarse_control_impl.o: mimo_pss_coarse_control_impl.cc.o
 .PHONY : mimo_pss_coarse_control_impl.o
 
@@ -1098,6 +1194,18 @@ help:
 	@echo "... mib_unpack_vbm_impl.o"
 	@echo "... mib_unpack_vbm_impl.i"
 	@echo "... mib_unpack_vbm_impl.s"
+	@echo "... mimo_channel_estimator_impl.o"
+	@echo "... mimo_channel_estimator_impl.i"
+	@echo "... mimo_channel_estimator_impl.s"
+	@echo "... mimo_extract_subcarriers_impl.o"
+	@echo "... mimo_extract_subcarriers_impl.i"
+	@echo "... mimo_extract_subcarriers_impl.s"
+	@echo "... mimo_pbch_demux_impl.o"
+	@echo "... mimo_pbch_demux_impl.i"
+	@echo "... mimo_pbch_demux_impl.s"
+	@echo "... mimo_pre_decoder_impl.o"
+	@echo "... mimo_pre_decoder_impl.i"
+	@echo "... mimo_pre_decoder_impl.s"
 	@echo "... mimo_pss_coarse_control_impl.o"
 	@echo "... mimo_pss_coarse_control_impl.i"
 	@echo "... mimo_pss_coarse_control_impl.s"
