--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -59,7 +59,11 @@ list(APPEND lte_sources
     mimo_sss_symbol_selector_impl.cc
     mimo_sss_calculator_impl.cc
     mimo_sss_tagger_impl.cc
-    mimo_remove_cp_impl.cc )
+    mimo_remove_cp_impl.cc
+    mimo_extract_subcarriers_impl.cc
+    mimo_channel_estimator_impl.cc
+    mimo_pbch_demux_impl.cc
+    mimo_pre_decoder_impl.cc )
 
 add_library(gnuradio-lte SHARED ${lte_sources})
 target_link_libraries(gnuradio-lte ${Boost_LIBRARIES} ${GNURADIO_RUNTIME_LIBRARIES} ${FFTW3F_LIBRARIES})
