--- a/build-cb/gr-lte.cbp
+++ b/build-cb/gr-lte.cbp
@@ -417,7 +417,7 @@
 			</Target>
 		</Build>
 		<ExtraCommands>
-			<Add after="echo foobar | sudo -S make -j 2 install" />
+			<Add after="echo foobar | sudo -S make install -j 2" />
 		</ExtraCommands>
 		<Unit filename="../../../../usr/local/lib/cmake/gnuradio/CMakeParseArgumentsCopy.cmake">
 			<Option virtualFolder="CMake Files/../../../usr/local/lib/cmake/gnuradio/" />
