predecoding averages over 2 adjacent subcarriers for alamouti code

--- a/build-cb/Makefile
+++ b/build-cb/Makefile
@@ -215,6 +215,19 @@ _lte_swig_swig_tag/fast:
 .PHONY : _lte_swig_swig_tag/fast
 
 #=============================================================================
+# Target rules for targets named lte_swig_swig_2d0df
+
+# Build rule for target.
+lte_swig_swig_2d0df: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 lte_swig_swig_2d0df
+.PHONY : lte_swig_swig_2d0df
+
+# fast build rule for target.
+lte_swig_swig_2d0df/fast:
+	$(MAKE) -f swig/CMakeFiles/lte_swig_swig_2d0df.dir/build.make swig/CMakeFiles/lte_swig_swig_2d0df.dir/build
+.PHONY : lte_swig_swig_2d0df/fast
+
+#=============================================================================
 # Target rules for targets named lte_swig_swig_doc
 
 # Build rule for target.
@@ -284,6 +297,7 @@ help:
 	@echo "... test-lte"
 	@echo "... _lte_swig"
 	@echo "... _lte_swig_swig_tag"
+	@echo "... lte_swig_swig_2d0df"
 	@echo "... lte_swig_swig_doc"
 	@echo "... pygen_swig_9a719"
 	@echo "... pygen_python_bc9c3"
